# final_project

./: .gitignore  .gitmodules  README.md  frames_2025-08-24_14.15.38.gv  launch_ros2_nodes.sh  launch_ros2_nodes_calibration.sh  launch_ros2_nodes_sim.sh  launch_webpage_nodes.sh  real_robot_frames.gv  requirements.txt
aruco_camera_calibration/: CMakeLists.txt  package.xml
aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/launch/: aruco_detector.launch.py
aruco_detection/rviz/: aruco.rviz
aruco_detection/scripts/: aruco_detector.py
camera_calibration/: CMakeLists.txt  package.xml
camera_calibration/config/: tf_messages.txt
camera_calibration/launch/: aruco_camera_tf_broadcaster.launch.py  camera_robot_tf_broadcaster.launch.py  final_tf_broadcaster.launch.py
camera_calibration/src/: aruco_camera_tf_broadcaster.cpp  camera_robot_tf_broadcaster.cpp  final_tf_broadcaster.cpp
circle_pattern_pose_estimation/: CMakeLists.txt  package.xml
circle_pattern_pose_estimation/launch/: circle_pose_estimation.launch.py
circle_pattern_pose_estimation/msg/: CirclePose.msg  CirclePoseArray.msg
circle_pattern_pose_estimation/rviz/: circle.rviz
circle_pattern_pose_estimation/scripts/: circle_pose_estimation.py
custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
custom_moveit_config/config/: moveit_controllers.yaml  name.srdf
custom_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
custom_moveit_pkg_new/: .setup_assistant  CMakeLists.txt  package.xml
custom_moveit_pkg_new/config/: moveit_controllers.yaml  name.srdf
custom_moveit_pkg_new/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit2_actions/: CMakeLists.txt  package.xml
moveit2_actions/action/: SetTrajectoryJointValues.action
moveit2_actions/launch/: start_joints_trajectory_action.launch.py
moveit2_actions/src/: start_joints_trajectory_action_client.cpp  start_joints_trajectory_action_server.cpp
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/action/: SetJointValues.action
moveit2_scripts/config/: arm_joints_real.yaml  collision_objects.yaml  collision_objects_real.yaml
moveit2_scripts/launch/: add_objects_planning_scene.launch.py  add_objects_planning_scene_real.launch.py  aruco_visible_trajectory.launch.py  aruco_visible_trajectory_real.launch.py  aruco_visible_trajectory_real_cartesian.launch.py  make_aruco_visible.launch.py  pick_and_place.launch.py  set_arm_joints_action_server.launch.py
moveit2_scripts/src/: add_objects_planning_scene.cpp  add_objects_planning_scene_real.cpp  aruco_visible_trajectory.cpp  aruco_visible_trajectory_real.cpp  aruco_visible_trajectory_real_cartesian.cpp  make_aruco_visible.cpp  set_arm_joints_action_client.cpp  set_arm_joints_action_server.cpp  test_camera_calibration.cpp
moveit2_services/: CMakeLists.txt  package.xml
moveit2_services/launch/: go_to_pose_service_client.launch.py  go_to_pose_service_server.launch.py  go_to_pose_service_server_sim.launch.py  set_arm_joints_service.launch.py  set_arm_joints_service_server.launch.py
moveit2_services/src/: go_to_pose_service_client.cpp  go_to_pose_service_server.cpp  set_arm_joints_service_client.cpp  set_arm_joints_service_server.cpp
moveit2_services/srv/: ArmJoints.srv
